--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,12 @@
 		    <artifactId>junit-jupiter-engine</artifactId>
 		    <scope>test</scope>
 		</dependency>
+		
+		<dependency>
+		  <groupId>com.auth0</groupId>
+		  <artifactId>java-jwt</artifactId>
+		  <version>4.5.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
